# cypy

./: .gitignore  README.md  commit_msg.txt  pyproject.toml
.github/workflows/: build.yml
cypy/: __init__.py  app.py
cypy/core/: config.py  translator.py  utils.py
